[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/img/bkg_menu.png" type="Texture" id=2]
[ext_resource path="res://assets/img/bkg_options.png" type="Texture" id=3]
[ext_resource path="res://assets/img/bkg_credits.png" type="Texture" id=4]
[ext_resource path="res://assets/img/btn_start.png" type="Texture" id=5]
[ext_resource path="res://assets/img/btn_options.png" type="Texture" id=6]
[ext_resource path="res://assets/img/btn_credits.png" type="Texture" id=7]
[ext_resource path="res://assets/img/btn_back.png" type="Texture" id=8]

[node name="menu" type="Node"]
script = ExtResource( 1 )

[node name="bkg_menu" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="bkg_options" type="Sprite" parent="."]
position = Vector2( 1280, 0 )
texture = ExtResource( 3 )
centered = false

[node name="bkg_credits" type="Sprite" parent="."]
position = Vector2( -1280, 0 )
texture = ExtResource( 4 )
centered = false

[node name="btn_start" type="Button" parent="."]
margin_left = 515.0
margin_top = 110.0
margin_right = 777.0
margin_bottom = 216.0
icon = ExtResource( 5 )

[node name="btn_options" type="Button" parent="."]
margin_left = 515.0
margin_top = 310.0
margin_right = 777.0
margin_bottom = 416.0
icon = ExtResource( 6 )

[node name="btn_credits" type="Button" parent="."]
margin_left = 515.0
margin_top = 500.0
margin_right = 777.0
margin_bottom = 606.0
icon = ExtResource( 7 )

[node name="btn_back1" type="Button" parent="."]
margin_left = -765.0
margin_top = 500.0
margin_right = -503.0
margin_bottom = 606.0
icon = ExtResource( 8 )

[node name="btn_back2" type="Button" parent="."]
margin_left = 1795.0
margin_top = 500.0
margin_right = 2057.0
margin_bottom = 606.0
icon = ExtResource( 8 )

[node name="cam1" type="Camera2D" parent="."]
position = Vector2( 640, 360 )
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
editor_draw_screen = false

[node name="Tween" type="Tween" parent="."]
[connection signal="button_up" from="btn_start" to="." method="_on_btn_start_up"]
[connection signal="button_up" from="btn_options" to="." method="_on_btn_options_up"]
[connection signal="button_up" from="btn_credits" to="." method="_on_btn_credits_up"]
[connection signal="button_up" from="btn_back1" to="." method="_on_btn_back1_up"]
[connection signal="button_up" from="btn_back2" to="." method="_on_btn_back2_up"]
